--- a/a3_report.html
+++ b/a3_report.html
@@ -19,74 +19,68 @@
 <p><img src="images/img1.png" alt="Image caption" style="width:90.0%" /> <img src="images/img2.png" alt="Image caption" style="width:90.0%" /> <img src="images/img3.png" alt="Image caption" style="width:90.0%" /></p>
 <h2 id="q2-cg-transformation-programming-lab-practice">Q2 CG transformation programming (lab practice)</h2>
 <h3 id="q2.1-warm-up-with-c">Q2.1 Warm up with C++</h3>
-<p>Complete? Yes or No</p>
-<!--If you answer Yes, insert one or more screenshot images to show the completion.-->
-<figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
-</figure>
-<!-- If No, add a short description to describe the issues encountered.-->
+<p>Complete? Yes</p>
 <h3 id="q2.2-2d-transformations">Q2.2 2D transformations</h3>
-<p>Complete? Yes or No</p>
+<p>Complete? Yes</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion.-->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img4.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!-- If No, add a short description to describe the issues encountered.-->
 <h3 id="q2.3-3d-objects-and-transformations">Q2.3 3D objects and transformations</h3>
-<p>Complete? Yes or No</p>
+<p>Complete? Yes</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion.-->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img5.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!-- If No, add a short description to describe the issues encountered.-->
 <h3 id="q2.4-mesh-object-model">Q2.4 Mesh object model</h3>
-<p>Complete? Yes or No</p>
-<!--If you answer Yes, insert one or more screenshot images to show the completion.-->
+<p>Complete? Yes <!--If you answer Yes, insert one or more screenshot images to show the completion.--></p>
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img6.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!-- If No, add a short description to describe the issues encountered.-->
 <h2 id="q3-simpleview1---transformations-programming">Q3 SimpleView1 - transformations (programming)</h2>
 <h3 id="q3.1-create-and-render-cube-objects">Q3.1 Create and render cube objects</h3>
-<p>Complete? Yes or No</p>
+<p>Complete? Yes</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion. -->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img8.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!--If No, add a short description to describe the issues encountered.-->
 <h3 id="q3.2-create-and-render-pyramid-object">Q3.2 Create and render pyramid object</h3>
-<p>Complete? Yes or No</p>
+<p>Complete? Yes</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion. -->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img7.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!--If No, add a short description to describe the issues encountered.-->
 <h3 id="q3.3-create-and-render-house-object">Q3.3 Create and render house object</h3>
-<p>Complete? Yes or No</p>
+<p>Complete? Yes</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion. -->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img9.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!--If No, add a short description to describe the issues encountered.-->
 <h3 id="q3.4-mcs-transforms">Q3.4 MCS transforms</h3>
-<p>Complete? Yes or No</p>
+<p>Complete? Yes</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion. -->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img10.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!--If No, add a short description to describe the issues encountered.-->
 <h3 id="q3.5-wcs-transforms">Q3.5 WCS transforms</h3>
 <p>Complete? Yes or No</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion. -->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img11.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!--If No, add a short description to describe the issues encountered.-->
 <h3 id="q3.6-vcs-transforms">Q3.6 VCS transforms</h3>
-<p>Complete? Yes or No</p>
+<p>Complete? Yes</p>
 <!--If you answer Yes, insert one or more screenshot images to show the completion. -->
 <figure>
-<img src="images/demo.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
+<img src="images/img12.png" alt="Image caption" style="width:90.0%" /><figcaption>Image caption</figcaption>
 </figure>
 <!--If No, add a short description to describe the issues encountered.-->
 <p><strong>References</strong></p>
